# patfu

./: .gitignore  README.md  aa.ipynb  mkdocs.yml  requirements_docs.txt  setup.cfg
.github/workflows/: build-sphinx.yml  build_sphinx_v2.yml
docs/: conf.py  explanation.md  how-to-guides.md  index.md  reference.md
explanation/: index.html
model/mult/: main.py
model/tests/: test_mult.py
patfu/mult/: main.py
patfu/notebooks/: random_notebook.ipynb
patfu/sum/: main.py
patfu/tests/: b.ipynb  test_sum.py
reference/: index.html
scripts/: before_install.sh  build_push_doc.sh  buildsite.sh
site/: 404.html  index.html  objects.inv
site/how-to-guides/: index.html
site/tutorials/: index.html
tests/: b.ipynb  test_mult.py  test_sum.py
