[metadata]
name = patfu
version = 1.0.3
description = Dummy package for testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://simado.github.io/
author = SIADO
author_email = simon.adams1221@gmail.com


[options]
packages = find:
package_dir=
    =model
install_requires =
    numpy>=1.20.3
python_requires = >=3.8


[options.packages.find]
include =
    mult/main.py
    sum/main.py